# InMemoryFuzzing

./: .gitignore  .gitmodules  README.md  TODO
Fuzzer/: AssemblyInfo.cs  FuzzController.cs  Fuzzer.csproj  Fuzzer.pidb  Fuzzer.sln  Fuzzer.userprefs  Main.cs
Fuzzer/Analyzers/: AnalyzeController.cs  BaseDataAnalyzer.cs  IDataAnalyzer.cs  MemoryZonesAnalyzer.cs  ProgramErrorAnalyzer.cs  SavedRegisterAnalyzer.cs  SimpleHeapOverflowAnalyzer.cs
Fuzzer/DataGenerators/: FixedByteGenerator.cs  IDataGenerator.cs  (+3 more)
Utils/: AssemblyInfo.cs  BitMap.cs  ByteHelper.cs  ByteStream.cs  CommandLineHandler.cs  ConsoleUtils.cs  DictionaryHelper.cs  SimpleFormatter.cs  StreamHelper.cs  StringHelper.cs  Utils.csproj  Utils.pidb  XmlHelper.cs  utils.pidb
dotNet_ScriptingEngine/: DevEck.ScriptingEngine.csproj
libbfd.net/: AssemblyInfo.cs  BfdStream.cs  libbfd.net.csproj  libbfd_native.cs
log_memory_allocations/: Makefile  config.mk  log_memory_allocations.c  log_memory_allocations_client.c
remote_control/: remote_control.c
test_data/: gdb_record  prog0-x64.execution_log  x86-64.registers
test_sources/: Testergebnisse_16122011.odt  config_paths.xml  heap_overflow_test  heap_overflow_test.c  heap_overflow_test_analyze.xml  heap_overflow_test_fuzz.xml  heap_overflow_test_fuzz_local.xml
test_sources/gif2png/src/: COPYING  Makefile  Makefile.am  Makefile.in  NEWS  README  config.h  config.h.in  config.status  configure  configure.ac  gif2png  gif2png.1  gif2png.c  gif2png.h  gif2png.spec  gif2png.spec.in  gif2png.xml  gifread.c  memory.c  web2png  web2png.1  web2png.xml
(+632 files in other folders)
